[package]
name = "jiralang"
version = "0.1.0"
authors = ["James Dunn <jamesallstar21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
tokio = { version = "1.8.0", features = ["full"] }
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
